--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,6 +1,6 @@
 .home-btn {
   display: block;
-  font-size: 3.6rem;
+  font-size: 2.6rem;
   text-align: center;
   color: white;
   font-weight: bold;
