--- a/app/assets/stylesheets/contracts/_new.scss
+++ b/app/assets/stylesheets/contracts/_new.scss
@@ -70,3 +70,7 @@
   width: 100%;
   background-size: cover;
 }
+
+.container-create-contract .form-group {
+    margin-bottom: -1.5rem;
+}
