--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -81,7 +81,6 @@ h1 {
   margin-bottom: 2rem;
 }
 
-
 // SECTION WHY
 
 .section-why {
@@ -94,7 +93,7 @@ h1 {
   display: inline-block;
   border-bottom: 3px solid #1992F7;
   margin-bottom: 4rem;
-  font-size: 3.6rem;
+  font-size: 3rem;
   font-weight: bold;
 }
 
