--- a/app/assets/stylesheets/user-actions/_login.scss
+++ b/app/assets/stylesheets/user-actions/_login.scss
@@ -43,4 +43,6 @@
 
 .container-log-in .form-check .form-check-label {
   display: block;
+  padding-top: 2px;
+  padding-left: 10px;
 }
